--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width,initial scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container">
+        <div id="calc-body">
+            <div id="calc-display">0</div>
+            <div id="calc-buttons">
+                <button class="span-2" id="clear-button">Clear</button>
+                <button class="span-2" id="delete-button">Delete</button>
+                <button class="number" id="7">7</button>
+                <button class="number" id="8">8</button>
+                <button class="number" id="9">9</button>
+                <button class="operand" id="divide">÷</button>
+                <button class="number" id="4">4</button>
+                <button class="number" id="5">5</button>
+                <button class="number" id="6">6</button>
+                <button class="operand" id="multiply">×</button>
+                <button class="number" id="1">1</button>
+                <button class="number" id="2">2</button>
+                <button class="number" id="3">3</button>
+                <button class="operand" id="subtract">-</button>
+                <button class="number" id="0">0</button>
+                <button class="decimal" id="decimal">.</button>
+                <button class="operand" id="equals">=</button>
+                <button class="operand" id="add">+</button>
+            </div>
+        </div>
+        <div id="footer">Made with ♥ by GW</div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html> 
