--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div id="calc-body">
             <div id="calc-display">0</div>
             <div id="calc-buttons">
-                <button class="span-2" id="clear-button">Clear</button>
-                <button class="span-2" id="delete-button">Delete</button>
+                <button class="clear span-2" id="clear">Clear</button>
+                <button class="delete span-2" id="delete">Delete</button>
                 <button class="number" id="7">7</button>
                 <button class="number" id="8">8</button>
                 <button class="number" id="9">9</button>
