--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <div id="container">
         <div id="calc-body">
-            <div id="calc-display">0</div>
+            <div id="calc-display"></div>
             <div id="calc-buttons">
-                <button class="clear span-2" id="clear">Clear</button>
-                <button class="delete span-2" id="delete">Delete</button>
-                <button class="number" id="7">7</button>
-                <button class="number" id="8">8</button>
-                <button class="number" id="9">9</button>
-                <button class="operand" id="divide">÷</button>
-                <button class="number" id="4">4</button>
-                <button class="number" id="5">5</button>
-                <button class="number" id="6">6</button>
-                <button class="operand" id="multiply">×</button>
-                <button class="number" id="1">1</button>
-                <button class="number" id="2">2</button>
-                <button class="number" id="3">3</button>
-                <button class="operand" id="subtract">-</button>
-                <button class="number" id="0">0</button>
-                <button class="decimal" id="decimal">.</button>
-                <button class="operand" id="equals">=</button>
-                <button class="operand" id="add">+</button>
+                <button class="clear span-2" data-value="clear">Clear</button>
+                <button class="delete span-2" data-value="delete">Delete</button>
+                <button class="number" data-value="7">7</button>
+                <button class="number" data-value="8">8</button>
+                <button class="number" data-value="9">9</button>
+                <button class="operand" data-value="divide">÷</button>
+                <button class="number" data-value="4">4</button>
+                <button class="number" data-value="5">5</button>
+                <button class="number" data-value="6">6</button>
+                <button class="operand" data-value="multiply">×</button>
+                <button class="number" data-value="1">1</button>
+                <button class="number" data-value="2">2</button>
+                <button class="number" data-value="3">3</button>
+                <button class="operand" data-value="subtract">-</button>
+                <button class="number" data-value="0">0</button>
+                <button class="decimal" data-value="decimal">.</button>
+                <button class="equals" data-value="equals">=</button>
+                <button class="operand" data-value="add">+</button>
             </div>
         </div>
         <div id="footer">Made with ♥ by GW</div>
